# UnityTest

./: Analysis and Approach.txt  Software_Engineer__Engine_Support_-_Homework_task.docx
DeviceInfoPlugin/: CMakeLists.txt
DeviceInfoPlugin/build-android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
DeviceInfoPlugin/build-android-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
DeviceInfoPlugin/src/: DeviceInfoPlugin.cpp  DeviceInfoPlugin.h  DeviceInfoPluginTest.cpp
Test/Assets/: InputSystem_Actions.inputactions
Test/Assets/Plugins/: DeviceInfoPluginWrapper.cs
Test/Assets/Scenes/: Exercise2.unity  Exercise3.unity
Test/Assets/Scenes/Exercise1/: JumpingBox.unity  StartUp.unity
Test/Assets/Scripts/Excercise1/: JumpingBox.cs  PauseScreenManager.cs  SceneLoader.cs  TestGuide.cs
Test/Assets/Scripts/Excercise2/: MenuManager.cs
Test/Assets/Scripts/Excercise3/: ChannelCounterPanel.cs  rChannelCounterJob.cs
Test/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Test/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Test/UserSettings/: EditorUserSettings.asset
Test/UserSettings/Layouts/: default-6000.dwlt
